RESOLVED FIXED79372
Crash in ScrollElasticityController::snapRubberBandTimerFired()
https://bugs.webkit.org/show_bug.cgi?id=79372
Summary Crash in ScrollElasticityController::snapRubberBandTimerFired()
Anders Carlsson
Reported 2012-02-23 09:48:26 PST
Crash in ScrollElasticityController::snapRubberBandTimerFired()
Attachments
Patch (2.27 KB, patch)
2012-02-23 09:49 PST, Anders Carlsson
kling: review+
Anders Carlsson
Comment 1 2012-02-23 09:49:27 PST
Andreas Kling
Comment 2 2012-02-23 09:56:05 PST
Comment on attachment 128489 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=128489&action=review > Source/WebCore/page/scrolling/mac/ScrollingTreeNodeMac.h:42 > + ~ScrollingTreeNodeMac(); virtual, bro.
Anders Carlsson
Comment 3 2012-02-23 10:01:12 PST
Note You need to log in before you can comment on or make changes to this bug.