Crash in ScrollElasticityController::snapRubberBandTimerFired() https://bugs.webkit.org/show_bug.cgi?id=79372 <rdar://problem/10915193>

Reviewed by Andreas Kling.

Invalidate the rubber-band timer in the ScrollingTreeNodeMac destructor.

* page/scrolling/mac/ScrollingTreeNodeMac.h:
(ScrollingTreeNodeMac):
* page/scrolling/mac/ScrollingTreeNodeMac.mm:
(WebCore::ScrollingTreeNodeMac::~ScrollingTreeNodeMac):
(WebCore):

git-svn-id: svn://svn.chromium.org/blink/trunk@108636 bbb929c8-8fbe-4397-9dbb-9b2b20218538