third_party/WebKit/Source/WebCore/page/scrolling/mac/ScrollingTreeNodeMac.h
@@ -40,6 +40,7 @@ namespace WebCore {
 class ScrollingTreeNodeMac : public ScrollingTreeNode, private ScrollElasticityControllerClient {
 public:
     explicit ScrollingTreeNodeMac(ScrollingTree*);
+    virtual ~ScrollingTreeNodeMac();
 
 private:
     // ScrollingTreeNode member functions.
