third_party/WebKit/Source/WebCore/page/scrolling/mac/ScrollingTreeNodeMac.mm
@@ -46,6 +46,12 @@ ScrollingTreeNodeMac::ScrollingTreeNodeMac(ScrollingTree* scrollingTree)
 {
 }
 
+ScrollingTreeNodeMac::~ScrollingTreeNodeMac()
+{
+    if (m_snapRubberbandTimer)
+        CFRunLoopTimerInvalidate(m_snapRubberbandTimer.get());
+}
+
 void ScrollingTreeNodeMac::update(ScrollingTreeState* state)
 {
     ScrollingTreeNode::update(state);
